# nginx-proxy-manager-cli

./: README.md  install.sh  pyproject.toml
docs/: commands.md  configuration.md  getting-started.md  troubleshooting.md
docs/workflows/: nginx-proxy-manager.md  unifi-dns.md
src/npmctl/: cli.py  cli_helpers.py  client.py  config.py  debug.py  errors.py  secrets_store.py
src/npmctl/commands/: auth.py  certificates.py  doctor.py  proxy_hosts.py  secrets.py  unifi_dns.py
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_doctor.py  test_secrets_store.py  test_unifi_dns.py
